# fmi-excel-guard

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/fmi_excel_guard/: __init__.py  auth.py  config.py  models.py  openai_review.py  parser.py  reporting.py  rules.py  word_parser.py
src/fmi_excel_guard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
